playing with EDA

--- a/breastcancer/breastcancer.ipynb
+++ b/breastcancer/breastcancer.ipynb
@@ -115,7 +115,7 @@
    ],
    "source": [
     "colums = ['age', 'year', 'nodes', 'class']\n",
-    "cancerBr = pd.read_csv('/home/bakhtawar/ds/data/haberman.csv', header=None, names=colums)\n",
+    "cancerBr = pd.read_csv(PATH + '/data/haberman.csv', header=None, names=colums)\n",
     "cancerBr.head()"
    ]
   },
